docker-hello-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-hello-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-hello-world
      version: v1
  template:
    metadata:
      labels:
        app: docker-hello-world
        version: v1
    spec:
      containers:
      - name: docker-hello-world
        image: scottsbaldwin/docker-hello-world
        ports:
        - containerPort: 80
