svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker-hello-world
  name: docker-hello-world
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: docker-hello-world
  type: NodePort
