virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-hello-world
spec:
  gateways:
  - gw-hello
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: docker-hello-world #.demo.svc.cluster.local
        subset: v1
      weight: 100
    mirror:
      host: docker-hello-world #.demo.svc.cluster.local
      subset: v2
    mirror_percent: 100
